Utilisateur de test
Test de createUser(), Début d'implémentation de test updateUser()

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -6,6 +6,8 @@
 10011=Une erreur non gérée est survenue lors de l'enregistrement des informations de la catégorie.
 10020=Une tentative d'enregistrement d'un utilisateur inexistante a eu lieu.
 10021=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'utilisateur.
+10020=Une tentative de mise à jour d'un utilisateur null a eu lieu.
+10021=Une tentative de mise à jour d'un utilisateur avec un ID null a eu lieu.
 
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
