--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -11,12 +11,26 @@
 
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
-20000=Régle article vendu nom erreur
-20001=Règle article vendu description erreur
-20002=Règle article vendu date debut enchere erreur
-20003=Régle article vendu date fin enchere erreur
-20004=Règle article vendu prix initial erreur
-20005=Règle article vendu prix de vente erreur
+20000 = "Le nom de l'article ne peux pas contenir plus de 30 caractères;
+20001 = "La description de l'article est limitée à 300 caractères;
+20002 = "La date de début d'enchère ne peut être antérieure à aujourd'hui";
+20003 = "La date de fin d'enchère ne peut être antérieure à la date de début d'enchère";
+
+# Vérifier si on accepte une enchère à 0 crédit. 
+# Si oui, Modification de la règle à faire dans EnchereManager(checkPrixInitial)
+20004 = "Il n'est pas possible de mettre en vente un article à un prix négatif";
+20005 = "Le prix de vente ne peut pas être inférieur au prix initial";
+
+#=>Erreurs Utilisateur
+20006 = "Le pseudo ne peut pas contenir plus de 30 caractères (alphanumériques uniquement)"; 
+20007 = "Le nom ne peut pas contenir plus de 30 lettres";
+20008 = "Le prénom ne peut pas contenir plus de 30 lettres";
+20009 = "L'email ne peut dépasser 20 caractères";
+20010 = "Le numéro de téléphone ne doit contenir que des chiffres (15 maximum)";
+20011 = "Le nom de rue est limité à 30 caractères (lettres et chiffres)";
+20012 = "Le code postal ne doit contenir que des chiffres (10 maximum)";
+20013 = "Le nom de ville ne doit pas dépasser 30 lettres";
+20014 = "Le mot de passe et la confirmation du mot de passe doivent être identique";
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs 
