Ajout méthode ArticleENchereDAOJdbcImpl et codes erreurs associés

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -2,35 +2,39 @@
 #=>Erreurs générales
 10000=Une tentative d'enregistrement d'un article inexistant a eu lieu.
 10001=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'article.
+10002=Une erreur est survenue lors de la sélection de l'article
 10010=Une tentative d'enregistrement d'une catégorie inexistante a eu lieu.
 10011=Une erreur non gérée est survenue lors de l'enregistrement des informations de la catégorie.
 10020=Une tentative d'enregistrement d'un utilisateur inexistante a eu lieu.
 10021=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'utilisateur.
 10020=Une tentative de mise à jour d'un utilisateur null a eu lieu.
 10021=Une tentative de mise à jour d'un utilisateur avec un ID null a eu lieu.
-
+10030=Une tentative d'enregistrement d'une enchere inexistante a eu lieu.
+10031=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'enchère.
+10032=Une erreur est survenue lors de la sélection de l'enchère
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
-20000 = "Le nom de l'article ne peux pas contenir plus de 30 caractères;
-20001 = "La description de l'article est limitée à 300 caractères;
-20002 = "La date de début d'enchère ne peut être antérieure à aujourd'hui";
-20003 = "La date de fin d'enchère ne peut être antérieure à la date de début d'enchère";
+20000 = Le nom de l'article ne peux pas contenir plus de 30 caractères
+20001 = La description de l'article est limitée à 300 caractères
+20002 = La date de début d'enchère ne peut être antérieure à aujourd'hui
+20003 = La date de fin d'enchère ne peut être antérieure à la date de début d'enchère";
 
 # Vérifier si on accepte une enchère à 0 crédit. 
 # Si oui, Modification de la règle à faire dans EnchereManager(checkPrixInitial)
-20004 = "Il n'est pas possible de mettre en vente un article à un prix négatif";
-20005 = "Le prix de vente ne peut pas être inférieur au prix initial";
+20004 = Il n'est pas possible de mettre en vente un article à un prix négatif
+20005 = Le prix de vente ne peut pas être inférieur au prix initial
 
 #=>Erreurs Utilisateur
-20006 = "Le pseudo ne peut pas contenir plus de 30 caractères (alphanumériques uniquement)"; 
-20007 = "Le nom ne peut pas contenir plus de 30 lettres";
-20008 = "Le prénom ne peut pas contenir plus de 30 lettres";
-20009 = "L'email ne peut dépasser 20 caractères";
-20010 = "Le numéro de téléphone ne doit contenir que des chiffres (15 maximum)";
-20011 = "Le nom de rue est limité à 30 caractères (lettres et chiffres)";
-20012 = "Le code postal ne doit contenir que des chiffres (10 maximum)";
-20013 = "Le nom de ville ne doit pas dépasser 30 lettres";
-20014 = "Le mot de passe et la confirmation du mot de passe doivent être identique";
+20006 = Le pseudo ne peut pas contenir plus de 30 caractères (alphanumériques uniquement)
+20007 = Le nom ne peut pas contenir plus de 30 lettres
+20008 = Le prénom ne peut pas contenir plus de 30 lettres
+20009 = L'email ne peut dépasser 20 caractères
+20010 = Le numéro de téléphone ne doit contenir que des chiffres (15 maximum)
+20011 = Le nom de rue est limité à 30 caractères (lettres et chiffres)
+20012 = Le code postal ne doit contenir que des chiffres (10 maximum)
+20013 = Le nom de ville ne doit pas dépasser 30 lettres
+20014 = Le mot de passe et la confirmation du mot de passe doivent être identique
+20015 = Le montant d'enchère doit être supérieur à la meilleure offre actuelle
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs 
