Changement context.xml pour ma connection DB

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -38,7 +38,7 @@
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs 
-#30000=Erreur lors 
+30000=Erreur lors de la création d'un utilisateur
 
 
 #ERREURS RAPPORTEES PAR LES INSTALL/TEST:
