--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -1,17 +1,31 @@
 #ERREURS RAPPORTEES PAR LA DAL:
 #=>Erreurs générales
+
+ #=>Erreurs Articles
 10000=Une tentative d'enregistrement d'un article inexistant a eu lieu.
-10001=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'article.
-10002=Une erreur est survenue lors de la sélection de l'article
+10001=Une erreur est survenue lors de l'enregistrement des informations de l'article dans la DB.
+10002=Une erreur est survenue lors de la sélection de l'article dans la DB
+
+#=>Erreurs Categories
 10010=Une tentative d'enregistrement d'une catégorie inexistante a eu lieu.
-10011=Une erreur non gérée est survenue lors de l'enregistrement des informations de la catégorie.
-10020=Une tentative d'enregistrement d'un utilisateur inexistante a eu lieu.
-10021=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'utilisateur.
-10020=Une tentative de mise à jour d'un utilisateur null a eu lieu.
-10021=Une tentative de mise à jour d'un utilisateur avec un ID null a eu lieu.
-10030=Une tentative d'enregistrement d'une enchere inexistante a eu lieu.
-10031=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'enchère.
-10032=Une erreur est survenue lors de la sélection de l'enchère
+10011=Une erreur  est survenue lors de l'enregistrement des informations de la catégorie dans la DB.
+
+#=>Erreurs Utilisateurs
+10020=Une tentative d'enregistrement d'un utilisateur inexistant a eu lieu.
+10021=Une erreur  est survenue lors de l'enregistrement des informations de l'utilisateur dans la DB.
+10022=Une erreur est survenue lors de la tentative de récupération d'un USER dans la DB
+10023=Une erreur est survenue lors de la tentative de récupération de la liste des pseudos dans la DB
+10024=Une erreur est survenue lors de la tentative de récupération de la liste des emails dans la DB
+10025=Une erreur est survenue lors de la tentative de mise à jour d'un USER dans la DB
+10026=Echec général quand tentative d'ajouter d'un USER sans ID dans la DB
+10027=Une erreur est survenue lors de la tentative d'ajouter une USER dans la DB
+10028=Une erreur est survenue lors de la tentative de suppression USER dans la DB
+
+#=>Erreurs Enchères
+10100=Une tentative d'enregistrement d'une enchere inexistante a eu lieu.
+10101=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'enchère.
+10102=Une erreur est survenue lors de la sélection de l'enchère
+
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
 20000 = Le nom de l'article ne peux pas contenir plus de 30 caractères
