Ajout méthode selectAllEncheres() et code erreur associé

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -16,15 +16,17 @@
 10022=Une erreur est survenue lors de la tentative de récupération d'un USER dans la DB
 10023=Une erreur est survenue lors de la tentative de récupération de la liste des pseudos dans la DB
 10024=Une erreur est survenue lors de la tentative de récupération de la liste des emails dans la DB
-10025=Une erreur est survenue lors de la tentative de mise à jour d'un USER dans la DB
-10026=Echec général quand tentative d'ajouter d'un USER sans ID dans la DB
-10027=Une erreur est survenue lors de la tentative d'ajouter une USER dans la DB
-10028=Une erreur est survenue lors de la tentative de suppression USER dans la DB
-
+10025=Une erreur est survenue lors de la recherche par pseudo de l'utilisateur dans la DB
+10026=Une erreur est survenue lors de la recherche par pseudo de l'utilisateur dans la DB
+10027=Une erreur est survenue lors de la tentative de mise à jour d'un USER dans la DB
+10028=Echec général quand tentative d'ajouter d'un USER sans ID dans la DB
+10029=Une erreur est survenue lors de la tentative d'ajouter un USER dans la DB
+10030=Une erreur est survenue lors de la tentative de suppression USER dans la DB
 #=>Erreurs Enchères
 10100=Une tentative d'enregistrement d'une enchere inexistante a eu lieu.
 10101=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'enchère.
 10102=Une erreur est survenue lors de la sélection de l'enchère
+10103=Une erreur est survenue lors de la récupération des enchères pour l'article sélectionné dans la DB
 
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
@@ -48,7 +50,11 @@
 20012 = Le code postal ne doit contenir que des chiffres (10 maximum)
 20013 = Le nom de ville ne doit pas dépasser 30 lettres
 20014 = Le mot de passe et la confirmation du mot de passe doivent être identique
-20015 = Le montant d'enchère doit être supérieur à la meilleure offre actuelle
+20015 = Ce pseudo est déjà pris, veuillez réessayer avec un autre pseudo
+20016 = Un compte existe déjà pour cette adresse email
+
+#=>Erreurs Enchères
+20020 = Le montant d'enchère doit être supérieur à la meilleure offre actuelle
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs 
