--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -26,7 +26,8 @@
 10100=Une tentative d'enregistrement d'une enchere inexistante a eu lieu.
 10101=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'enchère.
 10102=Une erreur est survenue lors de la sélection de l'enchère
-10103=Une erreur est survenue lors de la récupération des enchères pour l'article sélectionné dans la DB
+10103=Une erreur est survenue lors de la récupération des montants des enchères pour l'article sélectionné dans la DB
+10104=Une erreur est survenue lors de la récupération des enchères pour l'article sélectionné dans la DB
 
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
