--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -22,12 +22,17 @@
 10028=Echec général quand tentative d'ajouter d'un USER sans ID dans la DB
 10029=Une erreur est survenue lors de la tentative d'ajouter un USER dans la DB
 10030=Une erreur est survenue lors de la tentative de suppression USER dans la DB
+
 #=>Erreurs Enchères
 10100=Une tentative d'enregistrement d'une enchere inexistante a eu lieu.
 10101=Une erreur non gérée est survenue lors de l'enregistrement des informations de l'enchère.
 10102=Une erreur est survenue lors de la sélection de l'enchère
 10103=Une erreur est survenue lors de la récupération des montants des enchères pour l'article sélectionné dans la DB
 10104=Une erreur est survenue lors de la récupération des enchères pour l'article sélectionné dans la DB
+10105=Une erreur est survenue lors de la mise à jour d'une enchère innexistante
+10106=Une erreur est survenue lors de la mise à jour d'une enchère pour un numero d'article innexistant
+10107=Une erreur est survenue lors de la mise à jour d'une enchère pour un numero utilisateur innexistant
+10108=Une erreur est survenue lors de l'enregistrement la mise à jour d'une enchère dans la DB
 
 #ERREURS RAPPORTEES PAR LA BLL:
 #=>Erreurs Article
