Utilisateur - Inscription + Login
Servlet marche - erreur s'affiche - attention au .classpath

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -47,24 +47,27 @@
 20005 = Le prix de vente ne peut pas être inférieur au prix initial
 
 #=>Erreurs Utilisateur
-20006 = Le pseudo ne peut pas contenir plus de 30 caractères (alphanumériques uniquement)
-20007 = Le nom ne peut pas contenir plus de 30 lettres
-20008 = Le prénom ne peut pas contenir plus de 30 lettres
-20009 = L'email ne peut dépasser 20 caractères
-20010 = Le numéro de téléphone ne doit contenir que des chiffres (15 maximum)
-20011 = Le nom de rue est limité à 30 caractères (lettres et chiffres)
-20012 = Le code postal ne doit contenir que des chiffres (10 maximum)
-20013 = Le nom de ville ne doit pas dépasser 30 lettres
-20014 = Le mot de passe et la confirmation du mot de passe doivent être identique
-20015 = Ce pseudo est déjà pris, veuillez réessayer avec un autre pseudo
-20016 = Un compte existe déjà pour cette adresse email
+20020 = Le pseudo ne peut pas contenir plus de 30 caractères (alphanumériques uniquement)
+20021 = Le nom ne peut pas contenir plus de 30 lettres
+20022 = Le prénom ne peut pas contenir plus de 30 lettres
+20023 = L'email ne peut dépasser 20 caractères
+20024 = Le numéro de téléphone ne doit contenir que des chiffres (15 maximum)
+20025 = Le nom de rue est limité à 30 caractères (lettres et chiffres)
+20026 = Le code postal ne doit contenir que des chiffres (10 maximum)
+20027 = Le nom de ville ne doit pas dépasser 30 lettres
+20028 = Le mot de passe et la confirmation du mot de passe doivent être identique
+20029 = Ce pseudo est déjà pris, veuillez réessayer avec un autre pseudo
+20030 = Mot de passe incorrect, veuillez réessayer.
+20032 = Ce pseudo est déjà pris, veuillez réessayer avec un autre pseudo
+20033 = Cette email est déjà pris !
+20034 = Pseudo et email déja pris !
 
 #=>Erreurs Enchères
 20020 = Le montant d'enchère doit être supérieur à la meilleure offre actuelle
 
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs 
-30000=Erreur lors de la création d'un utilisateur
+30000=Erreur le nom d'utilisateur ou le mot de passe est incorrecte.
 
 
 #ERREURS RAPPORTEES PAR LES INSTALL/TEST:
