Ajout ServletNouvelleVente et codes erreurs associées

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -65,6 +65,7 @@
 #ERREURS RAPPORTEES PAR LES SERVLETS:
 #=>Erreurs 
 30000=Erreur lors de la création d'un utilisateur
+30001=Erreur lors de la création d'un article
 
 
 #ERREURS RAPPORTEES PAR LES INSTALL/TEST:
