Ajout de la méthode selectAllCategories() + codes erreurs associés

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -77,3 +77,5 @@
 #ERREURS RAPPORTEES PAR LES INSTALL/TEST:
 #=>Erreurs
 50000=Erreur lors de l'installation des catÃ©gories initial.
+50001=Erreur lors de la récupération de la catégorie en base de données
+50002=Erreur lors de la récupération de la liste des catégories en base de données
