Modif ServletEncheres EN COURS récupération élements pour affichage

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -5,10 +5,17 @@
 10000=Une tentative d'enregistrement d'un article inexistant a eu lieu.
 10001=Une erreur est survenue lors de l'enregistrement des informations de l'article dans la DB.
 10002=Une erreur est survenue lors de la sÃ©lection de l'article dans la DB
+10003=Une erreur est survenue lors de recherche d'articles par mot clés dans la DB
+10004=Une erreur est survenue lors de la sélection de tous les articles dans la DB
 
 #=>Erreurs Categories
 10010=Une tentative d'enregistrement d'une catÃ©gorie inexistante a eu lieu.
 10011=Une erreur  est survenue lors de l'enregistrement des informations de la catÃ©gorie dans la DB.
+
+#50100=Erreur lors de la récupération de la catégorie en base de données
+
+10012=Erreur lors de la récupération de la liste des catégories en base de données
+
 
 #=>Erreurs Utilisateurs
 10020=Une tentative d'enregistrement d'un utilisateur inexistant a eu lieu.
@@ -71,11 +78,13 @@
 30000=Erreur lors de la crÃ©ation d'un utilisateur
 30001=Erreur lors de la crÃ©ation d'un article
 30003=Erreur le nom d'utilisateur ou le mot de passe est incorrecte.
-
-
+30004=Erreur lors de la création de la liste des catégories
 
 #ERREURS RAPPORTEES PAR LES INSTALL/TEST:
 #=>Erreurs
+
+
 50000=Erreur lors de l'installation des catÃ©gories initial.
-50001=Erreur lors de la récupération de la catégorie en base de données
-50002=Erreur lors de la récupération de la liste des catégories en base de données
+
+
+
