Ajout méthode selectListArticlesByCategorie (int no_categorie)

--- a/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
+++ b/src/main/java/fr/eni/encheres/messages/messages_erreur.properties
@@ -8,7 +8,7 @@
 10003=Une erreur est survenue lors de recherche d'articles par mot clés dans la DB
 10004=Une erreur est survenue lors de la sélection de tous les articles dans la DB
 10005=Une erreur est survenue lors de la sélection inner (articles + utilisateurs) dans la DB
-
+10006=Une erreur est survenue lors de recherche d'articles par catégorie dans la DB
 #=>Erreurs Categories
 10010=Une tentative d'enregistrement d'une catÃ©gorie inexistante a eu lieu.
 10011=Une erreur  est survenue lors de l'enregistrement des informations de la catÃ©gorie dans la DB.
